@@ -1,4 +1,4 @@
-.TH VNSTATI 1 "JANUARY 2024" "version 2.12" "User Manuals"
+.TH VNSTATI 1 "APRIL 2024" "version 2.13" "User Manuals"
 .SH NAME
 vnstati \- image output support for vnStat
 
@@ -22,6 +22,8 @@ vnstati \- image output support for vnStat
 .RI [ limit ]]
 .RB [ \-\-dbdir
 .IR directory ]
+.RB [ \-\-dbiflist
+.RI [ mode ]]
 .RB [ \-\-debug ]
 .RB [ \-\-end
 .IR date ]
@@ -170,6 +172,17 @@ Use
 .I directory
 as database directory instead of using the directory specified in the configuration
 file or the hardcoded default if no configuration file is available.
+
+.TP
+.BI "--dbiflist " [mode]
+List interfaces currently in the database. If
+.I mode
+is not defined or is set to 0 then the output will use a one line verbose format. If
+.I mode
+is set to 1 then the output will contain one interface per line and if
+.I mode
+is set to 2 then only the interface count will be shown as a single number. See also
+.BR "--iflist" .
 
 .TP
 .B "-D, --debug"
