@@ -1,0 +1,6 @@
+#ifndef CLICOMMON_H
+#define CLICOMMON_H
+
+void showdbiflist(const int mode);
+
+#endif
