@@ -9,6 +9,7 @@
 #include "misc.h"
 #include "cfg.h"
 #include "cfgoutput.h"
+#include "clicommon.h"
 #include "vnstat_func.h"
 
 void initparams(PARAMS *p)
@@ -1355,53 +1356,6 @@ void showiflist(const int mode)
 			printf("%d\n", ifcount);
 		}
 	}
-}
-
-void showdbiflist(const int mode)
-{
-	int dbifcount;
-	iflist *dbifl = NULL, *dbifl_i = NULL;
-
-	if (db == NULL && !db_open_ro()) {
-		printf("Error: Failed to open database \"%s/%s\" in read-only mode.\n", cfg.dbdir, DATABASEFILE);
-		exit(EXIT_FAILURE);
-	}
-
-	if (mode == 2) {
-		dbifcount = db_getinterfacecount();
-		printf("%d\n", dbifcount);
-		db_close();
-		return;
-	}
-
-	dbifcount = db_getiflist(&dbifl);
-	if (dbifcount < 0) {
-		printf("Error: Failed to get interface list from database \"%s/%s\".\n", cfg.dbdir, DATABASEFILE);
-		exit(EXIT_FAILURE);
-	}
-
-	if (dbifcount == 0 && mode == 0) {
-		printf("Database is empty.\n");
-	} else {
-		dbifl_i = dbifl;
-
-		if (mode == 0) {
-			printf("Interfaces in database:");
-			while (dbifl_i != NULL) {
-				printf(" %s", dbifl_i->interface);
-				dbifl_i = dbifl_i->next;
-			}
-			printf("\n");
-		} else {
-			while (dbifl_i != NULL) {
-				printf("%s\n", dbifl_i->interface);
-				dbifl_i = dbifl_i->next;
-			}
-		}
-	}
-
-	iflistfree(&dbifl);
-	db_close();
 }
 
 void validateinterface(PARAMS *p)
