@@ -1,6 +1,7 @@
 2.13 / <not released yet>
 
- - no noteworthy changes yet
+ - New
+   - Add --dbiflist also to vnstati command
 
 
 2.12 / 21-Jan-2024
